// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database Create two accounts 1`] = `
Object {
  "accountA": S3ObjectInstance {
    "amount": "00001",
    "clientId": "clientOne",
    "id": "accountA",
    "type": "usd-savings",
  },
  "accountB": S3ObjectInstance {
    "amount": "00002",
    "clientId": "clientOne",
    "id": "accountB",
    "type": "usd-savings",
  },
}
`;

exports[`Database Create two clients 1`] = `
Object {
  "client1": S3ObjectInstance {
    "id": "clientOne",
    "name": "Carlos Guerrero",
    "username": "guerrerocarlos",
  },
  "client2": S3ObjectInstance {
    "id": "clientTwo",
    "name": "",
    "username": "",
  },
}
`;

exports[`Database Get accountA 1`] = `
Object {
  "accountA": Array [
    S3ObjectInstance {
      "amount": "00001",
      "clientId": "clientOne",
      "id": "accountA",
      "type": "usd-savings",
    },
  ],
}
`;

exports[`Database Get accounts of client 'clientOne'  1`] = `
Object {
  "accounts": Array [
    S3ObjectInstance {
      "amount": "00001",
      "clientId": "clientOne",
      "id": "accountA",
      "type": "usd-savings",
    },
    S3ObjectInstance {
      "amount": "00002",
      "clientId": "clientOne",
      "id": "accountB",
      "type": "usd-savings",
    },
  ],
}
`;

exports[`Database Get clientOne 1`] = `
Object {
  "client1": Array [
    S3ObjectInstance {
      "id": "clientOne",
      "name": "Carlos Guerrero",
      "username": "guerrerocarlos",
    },
  ],
}
`;

exports[`Database Update clientOne's info 1`] = `
Object {
  "client1": S3ObjectInstance {
    "id": "clientOne",
    "name": "Carlos Alejandro",
    "username": "guerrerocarlos",
  },
}
`;

exports[`Database Update clientOne's info and accounts to it 1`] = `
Array [
  S3ObjectInstance {
    "amount": "1000",
    "clientId": "clientOne",
    "id": "accountA",
    "type": "usd-savings",
  },
  S3ObjectInstance {
    "amount": "1000",
    "clientId": "clientOne",
    "id": "accountB",
    "type": "usd-savings",
  },
]
`;
